# Elasticsearch-A-Survey

./: README.md
src/: docker-compose.yaml  pyproject.toml
src/data/: images
src/helpers/: azure_helper.py  constants.py  data_processor.py  es.py  ima_loader.py  image_processor.py  models.py
src/scripts/EW/: base_64_encoding.ipynb  metadata_azure_blob_storage.ipynb  text_indexing.ipynb  vector_embedding.ipynb
src/scripts/TA/: 1_Indexing.ipynb  2_query_processing.ipynb  3_transaction.ipynb  4_concurrency.ipynb  5_benchmark.ipynb
